# granite-io

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  OWNERS  README.md  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml
.github/actions/ollama-setup/: action.yml
.github/workflows/: actionlint.yml  lint.yml  pypi.yml  test.yml  test_contrib.yml  test_e2e.yml  test_e2e_3_3.yml  test_examples.yml
.github/workflows/matchers/: pylint.json
contrib/00_example/: requirements.txt  tox.ini
contrib/00_example/examples/: hello.py
contrib/00_example/notebooks/: hello.ipynb
contrib/00_example/src/: hello_lib.py
contrib/00_strawman/: tox.ini
contrib/00_strawman/tests/: test_hello.py
contrib/pdl/: .pylintrc  README.md  pyproject.toml  tox.ini
contrib/pdl/examples/: enforce_low_halucination.py
contrib/pdl/notebooks/: pdl.ipynb  sequential_scaling.ipynb
contrib/pdl/src/: __init__.py
contrib/pdl/src/granite_io_pdl/: pdl_io.py  sequential_scaling.py
contrib/pdl/src/io/: pdl_io.py  sequential_scaling.pdl  sequential_scaling.py
contrib/pdl/tests/io/: test_pdl_io.py
data/: .gitignore
data/test_retrieval/govt10_embeds.parquet/: part_001.parquet
docs/: design.md
examples/: inference.py  inference_with_thinking.py  model_chat.py  model_chat_with_citation.py  model_chat_with_citation_hallucination.py  model_chat_with_citation_hallunication.py  model_chat_with_majority_voting.py  model_chat_with_mbrd_majority_voting.py  model_chat_with_thinking.py  model_chat_with_thinking_custom_io_processor.py  model_chat_with_thinking_separate_backend.py  rag_with_citations.py  rerank_with_llm.py  watsonx_litellm.py
notebooks/: .gitignore  answerability.ipynb  certainty.ipynb  citations.ipynb  context_relevance.ipynb  context_relevancy.ipynb  hallucinations.ipynb  hyde_rewrite.ipynb  intrinsics.ipynb  io.ipynb  io_multi_shot.ipynb  io_pdl.ipynb  io_sequential_scaling.ipynb  mbrd.ipynb  query_expansion.ipynb  query_rewrite.ipynb  rag.ipynb  retrieval.ipynb  voting.ipynb
notebooks/local-granite-3.3-8b-lora-rag-citation-generation/: adapter_config.json  added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json  training_config.json
notebooks/local-granite-3.3-8b-lora-rag-context-relevancy/: README.md  adapter_config.json
notebooks/local-granite-3.3-8b-lora-rag-query-rewrite/: adapter_config.json
src/granite_io/: __init__.py  factory.py  optional.py  types.py
src/granite_io/backend/: __init__.py  base.py  litellm.py  openai.py  registry.py  transformers.py  vllm_server.py
src/granite_io/io/: __init__.py  base.py  consts.py  granite_3_2.py  granite_output_parser.py  model_output_parser.py  multi_shot.pdl  pdl_io.py  registry.py  sequential_scaling.pdl  voting.py
src/granite_io/io/answerability/: __init__.py  answerability.py
src/granite_io/io/certainty/: __init__.py  certainty.py
src/granite_io/io/citations/: __init__.py  citations.py
src/granite_io/io/context_relevancy/: __init__.py  context_relevancy.py
src/granite_io/io/granite_3_2/: __init__.py  granite_3_2.py  granite_output_parser.py
src/granite_io/io/granite_3_3/: __init__.py  granite_3_3.py
src/granite_io/io/hallucinations/: __init__.py  hallucinations.py
src/granite_io/io/hyde_rewrite/: __init__.py  hyde_rewrite.py
src/granite_io/io/input_processors/: __init__.py
src/granite_io/io/llmrerank/: README.md  __init__.py  llmrerank.py
src/granite_io/io/output_processors/: __init__.py
src/granite_io/io/query_expansion/: __init__.py  query_expansion.py
src/granite_io/io/query_rewrite/: __init__.py  query_rewrite.py
src/granite_io/io/rag_agent_lib/: __init__.py  util.py
src/granite_io/io/retrieval/: __init__.py  retrieval.py  util.py
src/granite_io/io/voting/: __init__.py  mbrd.py  mbrd_voting.py  simple.py  voting.py
src/granite_io/utils/: mbrd.py
src/granite_io/visualization/: __init__.py  citations.py  index.css  index.js
tests/: conftest.py  test_backends.py  test_factory.py  test_types.py  test_utils.py
tests/cassettes/test_backends/: test_num_return_sequences_1[backend_litellm].yaml  test_num_return_sequences_1[backend_openai].yaml  test_num_return_sequences_3[backend_litellm].yaml  test_num_return_sequences_3[backend_openai].yaml  test_num_return_sequences_invalid[backend_litellm--1].yaml  test_num_return_sequences_invalid[backend_litellm-0].yaml  test_simple[backend_litellm].yaml  test_simple[backend_openai].yaml
tests/io/: test_answerability.py  test_certainty.py  test_citations.py  test_context_relevancy.py  test_granite_3_2.py  test_hallucinations.py  test_hyde_rewrite.py  test_make_io_processor.py  test_model_output_parser.py  test_query_expansion.py  test_query_rewrite.py  test_rerank.py  test_retrieval.py  test_voting.py
tests/io/cassettes/test_answerability/: test_run_model.yaml
tests/io/cassettes/test_certainty/: test_run_composite.yaml  test_run_model.yaml
tests/io/cassettes/test_citations/: test_run_composite.yaml  test_run_model.yaml
tests/io/cassettes/test_context_relevancy/: test_run_model.yaml
tests/io/cassettes/test_granite_3_2/: test_run_processor[backend_litellm-simple].yaml  test_run_processor[backend_litellm-thinking_tag].yaml  test_run_processor[backend_openai-simple].yaml  test_run_processor[backend_openai-thinking_tag].yaml
tests/io/cassettes/test_hallucinations/: test_run_composite.yaml  test_run_model.yaml  test_run_processor.yaml
tests/io/cassettes/test_make_io_processor/: test_make_io_processor[backend_litellm-simple].yaml  test_make_io_processor[backend_litellm-stop_strings].yaml  test_make_io_processor[backend_litellm-thinking_tag].yaml  test_make_io_processor[backend_openai-simple].yaml  test_make_io_processor[backend_openai-stop_strings].yaml  test_make_io_processor[backend_openai-thinking_tag].yaml
tests/io/cassettes/test_query_expansion/: test_run_model.yaml
tests/io/cassettes/test_query_rewrite/: test_request_processor.yaml  test_run_model.yaml
tests/io/granite_3_2/: test_granite_3_2.py  test_model_output_parser.py
tests/io/granite_3_3/: test_granite_3_3.py
(+79 files in other folders)
