# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=70.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "granite-io-pdl"
authors = [
  { name="Louis Mandel", email="lmandel@us.ibm.com" },
]
description = "Input and output processors written in PDL"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
version = "0.1.0"
dependencies = [
    "prompt-declaration-language >= 0.6",
]


[project.urls]
homepage = "https://github.com/ibm-granite/granite-io"
source = "https://github.com/ibm-granite/granite-io/tree/main/contrib/pdl"
issues = "https://github.com/ibm-granite/granite-io/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
granite_io_pdl = ["sequential_scaling.pdl"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["granite_io_pdl", "granite_io_pdl*"]

[tool.ruff]
target-version = "py310"
# same as Black's default line length
line-length = 88

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# modern type annotations
extend-safe-fixes = ["UP006", "UP007"]

# Fixers will be enabled gradually.
select = [
  "B", # flake8-bugbear
  "E", # pycodestyle
  "F", # Pyflakes
  "Q", # flake8-quotes
  # Ruff does not support isort's import_headings feature, yet.
  # "I",   # isort
  # "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
]

ignore = [
]

[tool.ruff.lint.isort]
# same as .isort.cfg except for settings that are commented out as that are not yet supported
# profile="black"
from-first=true
# import_heading_future="Future"
# import_heading_stdlib="Standard"
# import_heading_thirdparty="Third Party"
# import_heading_firstparty="First Party"
# import_heading_localfolder="Local"
known-local-folder=["src/granite_io_pdl","tests"]
# extend-skip="src/granite_io_pdl/_version.py"
